--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12" id="top">
 				<h3><font size="+2" color="#000080">Biography</font></h3>
 				<p>
-					<img class="imgarmin" src="armin.jpg" />
+					<img class="imgarmin" src="docs/files/armin.jpg" />
 					I am currently a Research Fellow in the <a href="http://www.surrey.ac.uk/cvssp/">Centre for Vision, Speech and Signal Processing</a> group at the University of Surrey, UK. I finished PhD in Computer Vision from the University of Surrey (UK), supervised by <a href="http://kahlan.eps.surrey.ac.uk/Personal/AdrianHilton/Welcome.html">Prof. Adrian Hilton</a>. My PhD introduced novel methods for general dynamic scene reconstruction from multi-view videos. I have also worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years in Computer Vision. Previously, in 2010, I recieved my M.Tech. degree from the Indian Institute of Technology, Kanpur, India, where my thesis was supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> on Human Computer Interaction.
 				</p>
 				<p>
