--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 			</div>
 		</div>
 	</nav>
-		<div class="custom-header-media">
-		<div id="wp-custom-header" class="wp-custom-header"><img src="docs/files/header.png" width="1380" height="308" ></div></div>
+		<div class="header">
+		<div id="my-header" class="my-header"><img src="docs/files/header.png" width=auto height="308" ></div></div>
 	<!-- The ID for each section are for captions that scroll to click on the menu, would become links -->
 	<section id="bio">
 		<div class="container-fluid">
