--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 			</div>
 		</div>
 	</nav>
+	<header>
+	<img src="docs/files/header.png" width= auto height="308" alt="logo" />
+	</header>
 	<!-- The ID for each section are for captions that scroll to click on the menu, would become links -->
 	<section id="bio">
 		<div class="container-fluid">
