--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		</div>
 	</nav>
 	<header>
-	<img src="docs/files/header.png" width= auto height="308" alt="logo" />
+	<img src="docs/files/header.png" class="img-responsive" />
 	</header>
 	<!-- The ID for each section are for captions that scroll to click on the menu, would become links -->
 	<section id="bio">
