--- a/index.html
+++ b/index.html
@@ -36,17 +36,16 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-				<!-- navbar-header is the name of the website (Armin Mustafa) and the menu for mobile -->
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menu">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#armin"><font size="+3">Armin Mustafa</font></a><br>
+					<a class="navbar-brand" href="#armin"><font size="+3">Armin Mustafa</font></a>
 				</div>
-				<!-- The collapse class is to convert the menu into the boto per mobil -->
 				<div class="collapse navbar-collapse" id="menu">
 					<ul class="nav navbar-nav navbar-left">
 						<li><a href="#bio">Home</a></li>
@@ -66,13 +65,14 @@
 	<header>
 	<img src="docs/files/header.png" class="img-responsive" />
 	</header>
+	
 	<!-- The ID for each section are for captions that scroll to click on the menu, would become links -->
 	<section id="bio">
 		<div class="container-fluid">
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12" id="top">
 				<h3><font size="+2" color="#000080">Biography</font></h3>
 				<p>
-					<img class="imgarmin" src="docs/files/armin.jpg" />
+					<img class="imgarmin" src="armin.jpg" />
 					I am currently a Research Fellow in the <a href="http://www.surrey.ac.uk/cvssp/">Centre for Vision, Speech and Signal Processing</a> group at the University of Surrey, UK. I finished PhD in Computer Vision from the University of Surrey (UK), supervised by <a href="http://kahlan.eps.surrey.ac.uk/Personal/AdrianHilton/Welcome.html">Prof. Adrian Hilton</a>. My PhD introduced novel methods for general dynamic scene reconstruction from multi-view videos. I have also worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years in Computer Vision. Previously, in 2010, I recieved my M.Tech. degree from the Indian Institute of Technology, Kanpur, India, where my thesis was supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> on Human Computer Interaction.
 				</p>
 				<p>
