--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 			</div>
 		</div>
 	</nav>
+		<!-- <div class="my-image-header"> -->
+		<!-- <div id="my-header" class="my-header"><img src="docs/files/header.png" width="2000" height="308" alt="" sizes="100vw"></div></div> -->
 	<header>
 	<img src="docs/files/header.png" class="img-responsive" />
 	</header>
@@ -472,7 +474,7 @@
 				<i class=""></i><br>
 
 				<h4><b>Map</b></h4>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2497.6712896070258!2d-0.5907630845480522!3d51.24354843778183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4875d0c108435331%3A0xfa86e1de8e762d41!2sCentre+for+Vision%2C+Speech+and+Signal+Processing!5e0!3m2!1sen!2sus!4v1492513767293" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2497.6712896070258!2d-0.5907630845480522!3d51.24354843778183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4875d0c108435331%3A0xfa86e1de8e762d41!2sCentre+for+Vision%2C+Speech+and+Signal+Processing!5e0!3m2!1sen!2sus!4v1492513767293" width="100%" height="300" frameborder="0" style="border:0"></iframe>
 				<!-- horitzontal tab-->
 				<hr>
 			</div>
