--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <!-- The attributes of the body are thinking because the menu where you are while you scroll. The offset coincides with the padding-top of the body -->
 <body id="armin" data-spy="scroll" data-target="#menu" data-offset="70">
-	<!-- MENU SUPERIOR -->
+	<!-- MENU  -->
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
@@ -62,10 +62,8 @@
 			</div>
 		</div>
 	</nav>
-		<!-- <div class="my-image-header"> -->
-		<!-- <div id="my-header" class="my-header"><img src="docs/files/header.png" width="2000" height="308" alt="" sizes="100vw"></div></div> -->
 	<header>
-	<img src="docs/files/header.png" class="img-responsive" />
+		<img src="docs/files/header.png" class="img-responsive" />
 	</header>
 	
 	<!-- The ID for each section are for captions that scroll to click on the menu, would become links -->
