--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/masters/patent.pdf">A Method and System for Human Gesture based on Visual Contour Analysis</a><br>
+							A Method and System for Human Gesture based on Visual Contour Analysis<br>
 							<a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="http://home.iitk.ac.in/~venkats/index.html">K.S. Venkatesh</a><br>
 							Indian Patent 2010</i><br>
 							<span class="btn-group btn-group-xs">
