--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/masters/patent.pdf">Method and apparatus for converting 2d video to 3d video</a><br>
+							Method and apparatus for converting 2d video to 3d video<br>
 							U.S. and Korean Patent 2013</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="https://www.google.com/patents/US20140210944">LINK</a>
