--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<link rel="shortcut icon" id="favicon" href="favicon.png"> 
 	<meta name="author" content="Armin Mustafa">
 
+	<meta name="keywords" content="Armin Mustafa, Armin, Armin Mustafa website, Mustafa personal webpage, CV, Research" />
+	
 	<!-- JAVASCRIPT -->	
 	<script type="text/javascript" src="./docs/files/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
@@ -446,6 +448,10 @@
 						</td>
 					</tr>
 				</table>
+				<br>
+				<p>
+					<font size="+0.25">For detailed CV please <a href="#contact">contact</a> me. </font>
+				</p>
 				<br>
 			</div>
 		</div>
