--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 						<a href="https://www.linkedin.com/in/armin-mustafa-8b7b886" target="_blank"><img class="nav-social linkedin" src="docs/files/linkedin.png" /></a>
 						<a href="https://www.researchgate.net/profile/Armin_Mustafa" target="_blank"><img class="nav-social" src="docs/files/rg.png" /></a>
 						<a href="https://www.facebook.com/arminmustafa" target="_blank"><img class="nav-social" src="docs/files/fb.png" /></a>
+						<a href="https://www.youtube.com/channel/UCf0lFeVuJP59I4zHS0Tc1qw" target="_blank"><img class="nav-social" src="docs/files/yt.png" /></a>
 					</div>
 				</div>
 			</div>
