--- a/index.html
+++ b/index.html
@@ -79,8 +79,22 @@
 					I am currently a Research Fellow in the <a href="http://www.surrey.ac.uk/cvssp/">Centre for Vision, Speech and Signal Processing</a> group at the University of Surrey, UK. I finished PhD in Computer Vision from the University of Surrey (UK), supervised by <a href="http://kahlan.eps.surrey.ac.uk/Personal/AdrianHilton/Welcome.html">Prof. Adrian Hilton</a>. My PhD introduced novel methods for general dynamic scene reconstruction from multi-view videos. I have also worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years in Computer Vision. Previously, in 2010, I recieved my M.Tech. degree from the Indian Institute of Technology, Kanpur, India, where my thesis was supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> on Human Computer Interaction.
 				</p>
 				<p>
-					My research interests include Computer Vision, mainly related with 3D Reconstruction and Segmentation.
+					My research interests are in area of 3D Reconstruction and Segmentation and covers Computer Vision, Image processing and Animation. Here are a few videos illustrating my work.
 				</p>
+				<!-- This is added to display videos in a row -- start -->
+				<p><div class="contenidovid">
+				<div class="video-wrapper">
+					<iframe src="https://www.youtube.com/embed/obnDpiDnScI?ecver=2&autoplay=1&loop=1" frameborder="25" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+				</div>
+
+				<div class="video-wrapper">
+					<iframe src="https://www.youtube.com/embed/bm_P13_-DsQ?ecver=2&autoplay=1&loop=1" frameborder="25" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+				  </div>
+
+				<div class="video-wrapper">
+					<iframe src="https://www.youtube.com/embed/GPu-UKppCfk?ecver=2&autoplay=1&loop=1" frameborder="25" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+				</div></div></p>
+				<!-- This is added to display videos in a row // Remove &autoplay=1&loop=1 to remove autoplay from the videos-- end -->
 				<!-- horitzontal bar -->
 				<hr>
 			</div>
@@ -294,20 +308,38 @@
 				</table>
 				<br/>
 				<h4><b>Short Papers, Talks and Miscellaneous</b></h4>
+				<h4>2017</h4>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/misc/bmva.jpg" />
+							</a>
+						</td>
+						<td>
+							<b> Organising </b><br>
+							<a href="https://www.eventbrite.co.uk/e/bmva-technical-meeting-dynamic-scene-reconstruction-registration-29604512895"> One day BMVA symposium on Dynamic Scene Reconstruction </a> on 21st June 2017 , London , UK <br>
+							Organisers: <a href="http://personal.ee.surrey.ac.uk/Personal/J.Guillemaut/" target="_blank">Jean-Yves Guillemaut</a>, <a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="http://marco.volino.co.uk/">Marco Volino</a><br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="docs/symposium/ppt.pdf">PPT</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>		
 				<h4>2016</h4>
 				<table class="table-responsive">
 					<tr>
 						<td>
 							<a href="#">
-								<img class="imgres" src="docs/symposium/symposium.png" />
+								<img class="imgres" src="docs/misc/symposium.png" />
 							</a>
 						</td>
 						<td>
-							<a> General 4D Scene Reconstruction (Talk)</a><br>
-							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
+							General 4D Scene Reconstruction <b>(Talk)</b><br>
 							at <i>Symposium on Computer Vision and Video Effects Generation, Organized by Rank Prize Funds, UK, 2016</i><br>
 							<span class="btn-group btn-group-xs">
-								<a class="btn btn-success" target="_blank" href="docs/symposium/ppt.pdf">PPT</a>
+								<a class="btn btn-success" target="_blank" href="docs/misc/ppt.pdf">PPT</a>
 							</span>
 						</td>
 					</tr>
@@ -322,7 +354,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/cvmp14/ArminCVMP2014.pdf">Initial Disparity Estimation using Sparse Matching for Wide-baseline Dense Stereo (Short Paper)</a><br>
+							<a href="docs/cvmp14/ArminCVMP2014.pdf">Initial Disparity Estimation using Sparse Matching for Wide-baseline Dense Stereo </a>(Short Paper)<br>
 							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, Evren Imre and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
 							at <i>The 11th European Conference in Visual Media Production (CVMP) 2015</i><br>
 							<span class="btn-group btn-group-xs">
