--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@
 		<div class="container-fluid">
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12" id="top">
 				<h3><font size="+2" color="#000080">Biography</font></h3>
+				<b>Research Fellow, <br>
+				<small><i><a href="http://www.surrey.ac.uk/cvssp/">Centre for Vision, Speech and Signal Processing</a>,<br>
+				<a href ="http://www.surrey.ac.uk/"> University of Surrey </a>, UK </b></i></small> <br>
 				<p>
 					<img class="imgarmin" src="docs/files/armin.jpg" />
-					I am currently a Research Fellow in the <a href="http://www.surrey.ac.uk/cvssp/">Centre for Vision, Speech and Signal Processing</a> group at the University of Surrey, UK. I finished PhD in Computer Vision from the University of Surrey (UK), supervised by <a href="http://kahlan.eps.surrey.ac.uk/Personal/AdrianHilton/Welcome.html">Prof. Adrian Hilton</a>. My PhD introduced novel methods for general dynamic scene reconstruction from multi-view videos. I have also worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years in Computer Vision. Previously, in 2010, I recieved my M.Tech. degree from the Indian Institute of Technology, Kanpur, India, where my thesis was supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> on Human Computer Interaction.
-				</p>
-				<p>
-					My research interests are in area of 3D Reconstruction and Segmentation and covers Computer Vision, Image processing and Animation. Here are a few videos illustrating my work.
+					I finished PhD in general dynamic scene reconstruction from multi-view videos in 2016 from the University of Surrey, supervised by <a href="http://kahlan.eps.surrey.ac.uk/Personal/AdrianHilton/Welcome.html">Prof. Adrian Hilton</a>. Previously, I worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I recieved M.Tech. degree from the Indian Institute of Technology(IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> on Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.<br>
+					<b> Research interests: </b> 3D Reconstruction and Segmentation which covers Computer Vision, Image processing and Animation. Here are a few videos illustrating my work.
 				</p>
 				<!-- This is added to display videos in a row -- start -->
 				<p><div class="contenidovid">
