--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 				
 				<h4><b>Internet</b></h4>
 				<!-- <i class="glyphicon glyphicon-envelope"></i> <a href="mailto:arminmustafa@gmail.com" target="_blank"> arminmustafa@gmail.com</a><br> -->
-				<i class="glyphicon glyphicon-envelope"></i> <a href="mailto:dcasas@mpi-inf.mpg.de" target="_blank"> a.mustafa@surrey.ac.uk</a><br>
+				<!-- <i class="glyphicon glyphicon-envelope"></i> <a href="mailto:a.mustafa@surrey.ac.uk" target="_blank"> a.mustafa@surrey.ac.uk</a><br> -->
 				<i class="glyphicon glyphicon-globe"></i> <a target="_blank" href="http://arminmustafa.github.io"> arminmustafa.github.io</a><br>
 				<i class="glyphicon glyphicon-globe"></i> <a target="_blank" href="https://www.linkedin.com/in/armin-mustafa-8b7b886/"> linkedin.com/in/arminmustafa</a><br>
 				<i class=""></i><br>
