--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
 				<p>
 					<img class="imgarmin" src="docs/files/armin.jpg" />
 					I finished PhD in general dynamic scene reconstruction from multi-view videos in 2016 from the University of Surrey, supervised by <a href="http://kahlan.eps.surrey.ac.uk/Personal/AdrianHilton/Welcome.html">Prof. Adrian Hilton</a>. Previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I recieved M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> on Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.<br>
-					<b> Research interests: </b> 3D Reconstruction and Segmentation which covers Computer Vision, Image processing and Animation. Here are a few videos illustrating my work.
+					<b> Research interests: </b> 3D Computer Vision, Segmentation, Multi-view Performance Capture and Human Computer Interaction which include robust computer vision to model and understand real world scenes.  <br>
+					Here are a few videos illustrating my work.
 				</p>
 				<!-- This is added to display videos in a row -- start -->
 				<p><div class="contenidovid">
