--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<!-- btn-group is to create groups of buttons. The size of the class brand btn-group in this case, it does not specify the specific button -->
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/cvpr17/ArminCVPR2017.pdf">PDF</a>
-								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4d/4DRecon/">Project</a>
+								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4d/SemRecon/">Project</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/obnDpiDnScI">Video</a>
 								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
 								<!--<a class="btn btn-success" target="_blank" href="#">web</a>-->
@@ -507,7 +507,7 @@
 				
 				<h4><b>Internet</b></h4>
 				<!-- <i class="glyphicon glyphicon-envelope"></i> <a href="mailto:arminmustafa@gmail.com" target="_blank"> arminmustafa@gmail.com</a><br> -->
-				<!-- <i class="glyphicon glyphicon-envelope"></i> <a href="mailto:a.mustafa@surrey.ac.uk" target="_blank"> a.mustafa@surrey.ac.uk</a><br> -->
+				<i class="glyphicon glyphicon-envelope"></i> <a href="mailto:a.mustafa@surrey.ac.uk" target="_blank"> a.mustafa@surrey.ac.uk</a><br>
 				<i class="glyphicon glyphicon-globe"></i> <a target="_blank" href="http://arminmustafa.github.io"> arminmustafa.github.io</a><br>
 				<i class="glyphicon glyphicon-globe"></i> <a target="_blank" href="https://www.linkedin.com/in/armin-mustafa-8b7b886/"> linkedin.com/in/arminmustafa</a><br>
 				<i class=""></i><br>
