--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/3dv15/Armin3DV2015.pdf">4D Temporally Coherent Dynamic Light-field Video</a><br>
+							<a href="docs/3dv17/Armin3DV2017.pdf">4D Temporally Coherent Dynamic Light-field Video</a><br>
 							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, <a href="http://marco.volino.co.uk/" target="_blank">Marco Volino</a>, <a href="http://personal.ee.surrey.ac.uk/Personal/J.Guillemaut/" target="_blank">Jean-Yves Guillemaut</a> and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
 							to appear at <i>3D Vision (3DV) 2017</i><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/3dv17/Armin3DV2017.pdf">PDF</a>
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4d/4DLFV/">Project</a>
-								<a class="btn btn-success" target="_blank" href="https://youtu.be/m3NThvKpR5w">Video</a>
+								<a class="btn btn-success" target="_blank" href="https://youtu.be/SMyGsHG4Ung">Video</a>
 								<a class="btn btn-success" target="_blank" href="docs/3dv17/poster.pdf">Poster</a>
 								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
 							</span>
