--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 						<a href="https://www.researchgate.net/profile/Armin_Mustafa" target="_blank"><img class="nav-social" src="docs/files/rg.png" /></a>
 						<a href="https://www.facebook.com/arminmustafa" target="_blank"><img class="nav-social" src="docs/files/fb.png" /></a>
 						<a href="https://www.youtube.com/channel/UCf0lFeVuJP59I4zHS0Tc1qw" target="_blank"><img class="nav-social" src="docs/files/yt.png" /></a>
+						<a href="https://scholar.google.co.uk/citations?user=0xOHqkMAAAAJ&hl=en" target="_blank"><img class="nav-social" src="docs/files/gscholar.png" /></a>
 					</div>
 				</div>
 			</div>
