--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<img class="imgarmin" src="docs/files/armin.jpg" />
 					I finished PhD in general dynamic scene reconstruction from multi-view videos in 2016 from the University of Surrey, supervised by <a href="http://kahlan.eps.surrey.ac.uk/Personal/AdrianHilton/Welcome.html">Prof. Adrian Hilton</a>. Previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I recieved M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> on Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.<br>
 					<b> Research interests: </b> 3D Computer Vision, Segmentation, Multi-view Performance Capture and Human Computer Interaction which include robust computer vision to model and understand real world scenes.  <br>
-					Here are a few videos illustrating my work.
+					My work was publised in <a href="http://www.rsipvision.com/ECCV2016-Thursday/files/assets/basic-html/page-1.html#">Computer Vision News Magazine</a> and here are a few videos of my work.
 				</p>
 				<!-- This is added to display videos in a row -- start -->
 				<p><div class="contenidovid">
