--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 								<a class="btn btn-success" target="_blank" href="http://cvssp.org/projects/4d/4DLFV/">Project</a>
 								<a class="btn btn-success" target="_blank" href="https://youtu.be/SMyGsHG4Ung">Video</a>
 								<a class="btn btn-success" target="_blank" href="docs/3dv17/poster.pdf">Poster</a>
+								<a class="btn btn-success" target="_blank" href="docs/3dv17/ppt.pdf">PPT</a>
 								<!--<a class="btn btn-success" target="_blank" href="docs/cvpr17/cvpr17.bib">bib</a>-->
 							</span>
 						</td>
