--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<img class="imgarmin" src="docs/files/armin.jpg" />
 					I finished PhD in general dynamic scene reconstruction from multi-view videos in 2016 from the University of Surrey, supervised by <a href="http://kahlan.eps.surrey.ac.uk/Personal/AdrianHilton/Welcome.html">Prof. Adrian Hilton</a>. Previously worked at <a href="http://www.samsung.com/in/aboutsamsung/samsungelectronics/india/rnd/">Samsung Research Institute</a>, Bangalore, India for 3 years (2010 - 2013) in Computer Vision. In 2010 I recieved M.Tech. degree from the Indian Institute of Technology (IIT), Kanpur, India supervised by <a href="http://home.iitk.ac.in/~venkats/index.html">Prof. K.S. Venkatesh</a> on Human Computer Interaction. Please refer to <a href="#cv">CV</a> for more information.<br>
 					<b> Research interests: </b> 3D Computer Vision, Segmentation, Multi-view Performance Capture and Human Computer Interaction which include robust computer vision to model and understand real world scenes.  <br>
-					My work was publised in <a href="http://www.rsipvision.com/ECCV2016-Thursday/files/assets/basic-html/page-1.html#">Computer Vision News Magazine</a> and here are a few videos of my work.
+					My work was published in <a href="http://www.rsipvision.com/ECCV2016-Thursday/files/assets/basic-html/page-1.html#">Computer Vision News Magazine</a> and here are a few videos of my work.
 				</p>
 				<!-- This is added to display videos in a row -- start -->
 				<p><div class="contenidovid">
@@ -107,9 +107,48 @@
 	<section id="research">
 		<div class="container-fluid">
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
-				<h3><font size="+2" color="#000080">Research</font></h3>
-				<!-- IMPORTANT: Note that the table has the class "table-responsive." This is because suits screen resolutions without having to give a size for the columns (td) -->
-				<h4><b>Publications</b></h4>
+				<h3><font size="+3" color="#000080">Research</font></h3>
+				<h4><b><font size="+2">Projects</font></b></h4>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/alive.png" />
+							</a>
+						</td>
+						<td>
+							ALIVE: Live Action Light Fields for Immersive VR Experiences<br>
+							<i>Innovate UK project in collaboration with Figment Productions and Foundry</i><br>
+							October 2016 - December 2017<br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="http://www.figmentproductions.co.uk/?portfolio=alive">Figment Productions</a>
+								<a class="btn btn-success" target="_blank" href="https://www.foundry.com/trends/research/alive-project">Foundry</a>
+								<a class="btn btn-success" target="_blank" href="https://youtu.be/SMyGsHG4Ung">Video</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<table class="table-responsive">
+					<tr>
+						<td>
+							<a href="#">
+								<img class="imgres" src="docs/impart.png" />
+							</a>
+						</td>
+						<td>
+							IMPART: Intelligent Management Platform for Advanced Real-Time media processes<br>
+							<i>EU FP7 project in collaboration with Filmlight, Double Negative, AUTH, UPF and BUT</i><br>
+							July 2013 - October 2015<br>
+							<span class="btn-group btn-group-xs">
+								<a class="btn btn-success" target="_blank" href="https://impart.upf.edu/#">Website</a>
+								<a class="btn btn-success" target="_blank" href="https://www.youtube.com/watch?time_continue=15&v=MmZsGNyGThk">Video</a>
+							</span>
+						</td>
+					</tr>
+				</table>
+				<br/>
+				<h4><b><font size="+2">Publications</font></b></h4>
 				<!-- create table-responsive tables responsive to the xapuza made me do it -->
 				<h4>2017</h4>
 				<table class="table-responsive">
@@ -297,7 +336,7 @@
 					</tr>
 				</table>
 				<br/>
-				<h4><b>Selected Patents</b></h4>
+				<h4><b><font size="+2">Selected Patents</font></b></h4>
 				<h4>2013</h4>
 				<table class="table-responsive">
 					<tr>
@@ -335,7 +374,7 @@
 					</tr>
 				</table>
 				<br/>
-				<h4><b>Short Papers, Talks and Miscellaneous</b></h4>
+				<h4><b><font size="+2">Short Papers, Talks and Miscellaneous</font></b></h4>
 				<h4>2017</h4>
 				<table class="table-responsive">
 					<tr>
@@ -345,8 +384,8 @@
 							</a>
 						</td>
 						<td>
-							<b> Organising </b><br>
-							<a href="https://www.eventbrite.co.uk/e/bmva-technical-meeting-dynamic-scene-reconstruction-registration-29604512895"> One day BMVA symposium on Dynamic Scene Reconstruction </a> on 21st June 2017 , London , UK <br>
+							<b> Organised </b><br>
+							<a href="https://www.eventbrite.co.uk/e/bmva-technical-meeting-dynamic-scene-reconstruction-registration-29604512895"> One day BMVA symposium on Dynamic Scene Reconstruction </a> on 21st June 2017 , London <br>
 							Organisers: <a href="http://personal.ee.surrey.ac.uk/Personal/J.Guillemaut/" target="_blank">Jean-Yves Guillemaut</a>, <a href="http://arminmustafa.github.io">Armin Mustafa</a> and <a href="http://marco.volino.co.uk/">Marco Volino</a><br>
 							<span class="btn-group btn-group-xs">
 								<a class="btn btn-success" target="_blank" href="docs/symposium/ppt.pdf">PPT</a>
@@ -382,7 +421,7 @@
 							</a>
 						</td>
 						<td>
-							<a href="docs/cvmp14/ArminCVMP2014.pdf">Initial Disparity Estimation using Sparse Matching for Wide-baseline Dense Stereo </a>(Short Paper)<br>
+							<a href="docs/cvmp14/ArminCVMP2014.pdf">Initial Disparity Estimation using Sparse Matching for Wide-baseline Stereo </a>(Short paper)<br>
 							<a href="http://arminmustafa.github.io">Armin Mustafa</a>, Hansung Kim, Evren Imre and <a href="http://personal.ee.surrey.ac.uk/Personal/A.Hilton/">Adrian Hilton</a><br>
 							at <i>The 11th European Conference in Visual Media Production (CVMP) 2015</i><br>
 							<span class="btn-group btn-group-xs">
@@ -400,8 +439,8 @@
 	<section id="cv">
 		<div class="container-fluid">
 			<div class="cos col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-8 col-xs-8">
-				<h3><font size="+2" color="#000080">CV</font></h3>
-				<h4><b>Work Experience</b></h4>
+				<h3><font size="+3" color="#000080">CV</font></h3>
+				<h4><b><font size="+2">Work Experience</font></b></h4>
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -438,7 +477,7 @@
 					</tr>
 				</table>
 				<br/>
-				<h4><b>Education</b></h4>
+				<h4><b><font size="+2">Education</font></b></h4>
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -485,7 +524,7 @@
 					</tr>
 				</table>
 				<br/>
-				<h4><b>Teaching Experience</b></h4>
+				<h4><b><font size="+2">Teaching Experience</font></b></h4>
 				<table class="table-responsive">
 					<tr>
 						<td>
@@ -531,10 +570,9 @@
 					UK<br/>
 				</p> -->
 				
-				<h4><b>Internet</b></h4>
+				<h4><b>Online</b></h4>
 				<!-- <i class="glyphicon glyphicon-envelope"></i> <a href="mailto:arminmustafa@gmail.com" target="_blank"> arminmustafa@gmail.com</a><br> -->
 				<i class="glyphicon glyphicon-envelope"></i> <a href="mailto:a.mustafa@surrey.ac.uk" target="_blank"> a.mustafa@surrey.ac.uk</a><br>
-				<i class="glyphicon glyphicon-globe"></i> <a target="_blank" href="http://arminmustafa.github.io"> arminmustafa.github.io</a><br>
 				<i class="glyphicon glyphicon-globe"></i> <a target="_blank" href="https://www.linkedin.com/in/armin-mustafa-8b7b886/"> linkedin.com/in/arminmustafa</a><br>
 				<i class=""></i><br>
 
