--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 						<br>
 						My work was published in <a href="http://www.rsipvision.com/ECCV2016-Thursday/files/assets/basic-html/page-1.html#">Computer Vision News Magazine</a> and here are a few videos of my work.
 					</p>
+				</div>
 			
 				<!-- This is added to display videos in a row -- start -->
 				<p><div class="contenidovid">
