--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 				<table class="table-responsive">
 					<tr>
 						<td>
-						<img class="img-rounded" src="docs/files/surrey.png" alt="" width="55" height="55"/>
+						<img class="img-rounded" src="docs/files/raeng.jpg" alt="" width="55" height="55"/>
 						</td>
 						<td>
 							<font size="+0.25">Royal Academy of Engineering Research Fellow: Aug' 2018 - Present</font> <br style="line-height: 8px" />
