--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </script>
 <head><meta charset="utf-8">
-	<title>Armin Mustafa | Centre for Vision, Speech and Signal Processing | University of Surrey</title>
+	<title>Armin Mustafa | RAEng Research Fellow | CVSSP | University of Surrey</title>
 	<meta name="title" content="Armin Mustafa" />
 	<meta name="description" content="Armin Mustafa" />
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
