--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <p>
                         <b> Research interests: </b> 3D/4D Computer Vision, Scene Understanding, Segmentation, Multi-view Performance Capture and Human Computer Interaction which include robust computer vision to model and understand real world scenes.
 						<br>
-						My work was published in <a href="http://www.rsipvision.com/ECCV2016-Thursday/files/assets/basic-html/page-1.html#">Computer Vision News Magazine</a> and here are a few videos of my work.
+						My work was published in <a href="https://www.rsipvision.com/ECCV2016-Thursday/12/">Computer Vision News Magazine</a> and here are a few videos of my work.
 					</p>
 				</div>
 			
